--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --sitebg: url(https://i.imgur.com/W3Jhoqh.jpg);
+    --sitebg: url(https://cdn.discordapp.com/attachments/392267144316059650/751339053592477726/54ac34b5d7760f2c24766cb229d5ca5c.jpg);
     --banner: url(https://i.imgur.com/lnJnI6p.jpg);
     --avatar: url(https://i.imgur.com/IaAliST.png);
     --vbd: url(https://res.kura.gq/vbd.png);
