--- a/style.css
+++ b/style.css
@@ -138,6 +138,13 @@ html {
     right: 0;
 }
 
+#loader {
+    z-index: 1001; /* anything higher than z-index: 1000 of .loader-section */
+}
+h1 {
+    color: #EEEEEE;
+}
+
 .creator {
     font-weight: 700;
     font-size: 24px;
