--- a/style.css
+++ b/style.css
@@ -189,6 +189,13 @@ h1 {
                 transition: all 0.3s 0.6s ease-out;
 }
 
+.loaded #loader-wrapper .loader-section.section-right,
+.loaded #loader-wrapper .loader-section.section-left {
+ 
+    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+}
+
 .creator {
     font-weight: 700;
     font-size: 24px;
